No smooth_lightning for the nether, it was pretty bad...

--- a/minecraft-webmap-generator/config
+++ b/minecraft-webmap-generator/config
@@ -24,7 +24,7 @@ renders["Night"] = {
 renders["Nether"] = {
     "world": "Minecraft world",
     "title": "Minecraft world (nether)",
-    "rendermode": "nether_smooth_lighting",
+    "rendermode": "nether",
     "dimension": "nether"
 }
 
