Update web admin credentials when starting minecraft-server-cpp container

--- a/minecraft-server-cpp/webadmin.ini
+++ b/minecraft-server-cpp/webadmin.ini
@@ -1,8 +1,8 @@
 ; This file controls the webadmin feature of MCServer
 ; Username format: [User:*username*]
 ; Password format: Password=*password*; for example:
-[User:admin]
-Password=admin
+[User:USER_FIELD]
+Password=PASS_FIELD
 
 [WebAdmin]
 Port=80
