Updated data volume container
Signed-off-by: Adrien Duermael <adrien@docker.com>

--- a/minecraft-data/Dockerfile
+++ b/minecraft-data/Dockerfile
@@ -1,6 +1,7 @@
-FROM ubuntu:14.04
+FROM busybox:latest
 
-VOLUME ["/minecraft-data"]
+ADD ./data /data
 
-ENTRYPOINT ["/bin/true"]
+VOLUME ["/data"]
 
+CMD ["/bin/true"]
