--- a/minecraft-server/Dockerfile
+++ b/minecraft-server/Dockerfile
@@ -1,17 +1,19 @@
 FROM ubuntu:14.04
-ENV	DEBIAN_FRONTEND noninteractive
 
-RUN apt-get --yes update; apt-get --yes upgrade; apt-get --yes install software-properties-common
-RUN sudo apt-add-repository --yes ppa:webupd8team/java; apt-get --yes update
+RUN apt-get update
+RUN apt-get upgrade -y
+RUN apt-get install software-properties-common curl -y
+
+RUN apt-add-repository ppa:webupd8team/java -y
 RUN echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections  && \
-    echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections  && \
-    apt-get --yes install curl oracle-java8-installer
+    echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections
+RUN apt-get update
+RUN apt-get install oracle-java8-installer -y
 
 ADD ./start.sh /start.sh
-
 RUN chmod +x /start.sh
 
 EXPOSE 25565
 
 ENTRYPOINT ["/start.sh"]
-CMD ["2G"]
+CMD ["2G", "1.10.2"]
